--- a/sass/framework.scss
+++ b/sass/framework.scss
@@ -258,6 +258,7 @@
       display: inline-block;
       width: 100%;
       height: 100%;
+      border-radius: inherit;
       background-size: 80px 80px;
       background-image: linear-gradient(
         135deg,
